# MiAssistantFork

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.sh  build_windows.bat  miasst_patched.c
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/fuzz/: Cargo.toml
crates/core/fuzz/fuzz_targets/: fuzz_adb_header.rs
crates/core/src/: adb.rs  device.rs  errors.rs  lib.rs  md5.rs  sideload.rs  usb.rs  validate.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
crates/gui/wix/: main.wxs
