[package]
name = "miassistant-cli"
version = "0.1.0"
edition = "2021"
description = "Command line interface for MiAssistantTool v2"

[dependencies]
miassistant-core = { path = "../core" }
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde_json.workspace = true
indicatif.workspace = true
