[package]
name = "miassistant-cli"
version = "0.1.0"
edition = "2021"
description = "MAF CLI: Flash official Xiaomi/MIUI/HyperOS recovery packages (locked bootloader rescue)"

[dependencies]
miassistant-core = { path = "../core" }
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde_json.workspace = true
indicatif.workspace = true
ctrlc.workspace = true
