[package]
name = "miassistant-core"
version = "0.1.0"
edition = "2021"
description = "Core library for MAF (MiAssistantFork): Xiaomi recovery flashing (USB, ADB-like transport, validation, sideload)."

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
rusb.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
md5 = "0.7"
reqwest.workspace = true
hex.workspace = true
bytes.workspace = true
indicatif.workspace = true
async-trait.workspace = true
aes.workspace = true
cbc.workspace = true
urlencoding.workspace = true
digest.workspace = true
openssl = { workspace = true, optional = true }

[features]
default = []
openssl = ["dep:openssl"]

[dev-dependencies]
tempfile = "3"
